# anya

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  JSON_SCHEMA.md  LICENSE.TXT  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS_OF_SERVICE_STUB.md  audit.toml  build.rs  components.json  docker-compose.yml  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tarpaulin-report.html  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml  config.toml.example
.choco/: anya.nuspec
.choco/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup-proprietary/: action.yml
.github/workflows/: ci.yml  create-release.yml  package.yml  release.yml
.rpm/: anya-security-core.spec
anya-stubs/data/: Cargo.toml
anya-stubs/data/src/: lib.rs
anya-stubs/scoring/: Cargo.toml
anya-stubs/scoring/src/: api_lists.rs  confidence.rs  detection_patterns.rs  ep_signatures.rs  ioc.rs  ksd.rs  lib.rs  thresholds.rs  types.rs
benches/: analysis_benchmarks.rs
debian/: README.Debian  anya.1  anya.manpages  changelog  control  copyright  install  postrm  rules
docker/: seccomp.json
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  JSON_SCHEMA.md  PRIVACY.md  SARIF_RULES.md  TERMS_OF_SERVICE_STUB.md
e2e/: bible-verse-toggle.test.ts  mitre-navigation.test.ts  teacher-mode-sidebar.test.ts  wdio.conf.ts
examples/: README.md  basic_analysis.rs  batch_processing.rs  custom_config.rs  json_output.rs
scripts/: bump-version.sh
src/: cab_parser.rs  case.rs  cert_db.rs  compare.rs  confidence.rs  config.rs  dotnet_parser.rs  elf_parser.rs  errors.rs  events.rs  export.rs  guided_output.rs  gzip_parser.rs  hash_check.rs  html_parser.rs  image_parser.rs  img_parser.rs  ioc.rs  iso_parser.rs  js_parser.rs  lib.rs  lnk_parser.rs  macho_parser.rs  main  main.rs  msi_parser.rs  ole_parser.rs  onenote_parser.rs  output.rs  parser_registry.rs  pe_parser.rs  ps_parser.rs  python_parser.rs  rar_parser.rs  report.rs  rtf_parser.rs  sarif.rs  script_parser.rs  sevenz_parser.rs  tar_parser.rs  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/rules/: .gitignore
src-tauri/src/: lib.rs  main.rs
src/__tests__/: bible-verse-bar.test.tsx  dropzone-friendly-error.test.tsx  installer.test.tsx  mitre-tab.test.tsx  overview-tab.test.tsx  settings-toggles.test.tsx  setup.ts  strings-tab.test.tsx  teacher-mode-sidebar.test.tsx  toast.test.tsx
src/__tests__/__mocks__/@tauri-apps/: plugin-sql.ts
src/__tests__/__mocks__/@tauri-apps/api/: core.ts
src/data/: explanations.rs  explanations_data.json  lessons.rs  lessons_data.json  mitre_data.json  mitre_mappings.rs  mod.rs  verses.rs
tests/: batch_tests.rs  cli_integration_tests.rs  config_tests.rs  integration_cli.sh  json_output_tests.rs  pe_parser_tests.rs  sarif_output_tests.rs  stdin_input_tests.rs
tests/fixtures/: README.md  batch_tests.rs  json_output_tests.rs
tests/fixtures/sarif-golden/: clean-text.sarif.json  simple-suspicious.sarif.json
tests/helpers/: mod.rs
ui/: App.tsx  globals.css  main.tsx
ui/components/: AnimatedEmptyState.tsx  BatchDashboard.tsx  BatchGraph.tsx  BatchSidebar.tsx  BibleVerseBar.tsx  CaseBrowser.tsx  CompareView.tsx  CopyButton.tsx  DropZone.tsx  GraphSettingsPanel.tsx  GuidedTour.tsx  HomeView.tsx  Installer.css  Installer.tsx  KeyboardShortcutsOverlay.tsx  SettingsModal.tsx  SingleFileGraph.tsx  SkeletonLoader.tsx  SplashScreen.tsx  TabNav.tsx  TeacherSidebar.tsx  Toast.tsx  TopBar.tsx  Uninstaller.tsx
ui/components/tabs/: EntropyTab.tsx  FormatAnalysisTab.tsx  IdentityTab.tsx  ImportsTab.tsx  MitreTab.tsx  OverviewTab.tsx  SectionsTab.tsx  SecurityTab.tsx  StringsTab.tsx
ui/data/: dll_explanations.json  function_explanations.json  mitre_attack.json  technique_explanations.json
ui/hooks/: useAnalysis.ts  useFontSize.ts  useKeyboardShortcuts.ts  useTeacherMode.ts  useTheme.ts
ui/lib/: apiDescriptions.ts  db.ts  risk.ts  tauri-bridge.ts  utils.ts
ui/types/: analysis.ts
