[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "anya-security-core"
version = "2.0.4"
edition = "2024"
rust-version = "1.85"
authors = ["Daniel Iwugo <daniel@themalwarefiles.com>"]
license = "AGPL-3.0-or-later"
description = "Fast, comprehensive malware analysis platform built in Rust"
documentation = "https://docs.rs/anya-security-core"
homepage = "https://github.com/elementmerc/anya"
readme = "README.md"
keywords = ["malware", "security", "analysis", "forensics", "pe"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/elementmerc/anya"

[package.metadata]
authors_note = "Christ is King"

# Add this section for better docs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rpm]
package = "anya"

[package.metadata.rpm.cargo]
buildflags = ["--release", "--locked"]

[package.metadata.rpm.targets]
anya = { path = "/usr/bin/anya" }

[dependencies]
# Internal private dependencies — stubs by default, overridden via .cargo/config.toml
anya-scoring = { path = "anya-stubs/scoring" }
anya-data = { path = "anya-stubs/data" }

# For multi-pattern byte scanning (packer/compiler detection in one pass)
aho-corasick = "1"

# For command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

# For hashing algorithms
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# For hexadecimal encoding
hex = "0.4"

# For better error handling
anyhow = "1.0"

# Structured logging — replaces raw println/eprintln across the codebase
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For parsing PE/ELF/Mach-O files
goblin = "0.8"

# For colored terminal output
colored = "2.1"

# For progress bars
indicatif = "0.17"

# For file system watching (anya watch)
notify = "7"

# For shell completion generation
clap_complete = "4"

# For JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For SARIF 2.1.0 output (typed schema via OASIS-schema-generated types)
serde-sarif = "0.7"

# For MIME type detection via magic bytes
infer = "0.16"

# For TLSH fuzzy hashing
tlsh2 = "1.1"

# For parallel hash computation
rayon = "1.10"

# For memory-mapped file I/O
memmap2 = "0.9"

# For IOC pattern matching in extracted strings
regex = "1"

# For directory traversal
walkdir = "2.5"

# For TOML configuration files
toml = "0.8"

# For YAML serialization (case management)
serde_yaml = "0.9"

# For ISO timestamps (case management)
chrono = { version = "0.4", features = ["serde"] }

# For finding user's home directory
dirs = "5.0"

# For PDF report generation (pure Rust, no system dependencies)
printpdf = "0.7"

# YARA-X: pure Rust YARA engine (BSD-3-Clause, by VirusTotal)
# Minimal features — we only need rule compilation + scanning, not all modules
yara-x = { version = "1", default-features = false, features = ["linkme", "constant-folding", "fast-regexp", "pe-module", "elf-module", "math-module", "hash-module", "string-module"], optional = true }

# For Office document (ZIP-based) macro detection
zip = "2"
cms = "0.2.3"
x509-cert = "0.2.5"
const-oid = "0.10.2"

[features]
default = ["cli", "extended-parsers", "yara"]
# CLI binary — disable for library-only builds
cli = []
# Extended format parsers (JS, PS, VBS, HTML, XML, OLE, RTF, ZIP, Image, LNK, ISO, CAB, MSI)
# Core always includes PE, ELF, Mach-O, PDF, Office
extended-parsers = []
# YARA rule scanning support (V2) — backed by yara-x pure Rust engine
yara = ["dep:yara-x"]

[dev-dependencies]
# For integration testing
tempfile = "3.10"

# For benchmarking
criterion = "0.5"

[lib]
name = "anya_security_core"
path = "src/lib.rs"

[[bin]]
name = "anya"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

