[package]
name = "anya-gui"
version = "1.2.5"
edition = "2021"
description = "Anya — PE malware analysis desktop app (Tauri GUI)"

[lib]
name = "anya_gui_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-sql    = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
# Analysis library (same workspace)
anya-security-core = { path = ".." }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
